updating readmes and workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,13 @@
-name: build-and-lint
+name: ci-sanity
 on: [push]
 jobs:
-    build:
+    fmt-validate:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - name: Docker build
-              run: docker build -t ml-service:ci .
             - name: Terraform fmt
               run: terraform fmt -check -recursive
+            - name: Helm lint
+              run: helm lint ./helm/ml-service || true
+            - name: Docker build (smoke)
+              run: docker build -t ml-service:ci .
