feat(helm): add Service + optional ALB Ingress; probes & securityContext; runbook notes

--- a/helm/ml-service/templates/deployment.yaml
+++ b/helm/ml-service/templates/deployment.yaml
@@ -1,13 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: { name: ml-service }
+metadata:
+  name: ml-service
+  labels:
+    app: ml-service
 spec:
-  replicas: 1
-  selector: { matchLabels: { app: ml-service } }
+  replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app: ml-service
   template:
-    metadata: { labels: { app: ml-service } }
+    metadata:
+      labels:
+        app: ml-service
     spec:
+      securityContext: {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: api
-          image: '<ECR_URI>/ml-service:{{ .Values.imageTag | default "latest" }}'
-          ports: [{ containerPort: 8080 }]
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: {{ .Values.service.targetPort }}
+          securityContext: {{- toYaml .Values.securityContext | nindent 12 }}
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.livenessProbe.path }}
+              port: {{ .Values.livenessProbe.port }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+          readinessProbe:
+            httpGet:
+              path: {{ .Values.readinessProbe.path }}
+              port: {{ .Values.readinessProbe.port }}
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
