--- a/helm/ml-service/values.yaml
+++ b/helm/ml-service/values.yaml
@@ -11,12 +11,14 @@ service:
   targetPort: 8080
 
 ingress:
-  enabled: false
+  enabled: true
   className: alb
   annotations:
+    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
+    alb.ingress.kubernetes.io/healthcheck-path: /health
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
   hosts:
     - host: "" # keep empty for path-only
       paths:
