--- a/helm/ml-service/values.yaml
+++ b/helm/ml-service/values.yaml
@@ -1,3 +1,5 @@
+## helm/ml-service/values.yaml
+
 replicaCount: 1
 
 image:
@@ -26,7 +28,14 @@ ingress:
           pathType: Prefix
   tls: [] # e.g., - hosts: ["example.com"] secretName: tls-secret
 
-resources: {}
+resources:
+  requests:
+    cpu: "100m"
+    memory: "256Mi"
+  limits:
+    cpu: "500m"
+    memory: "512Mi"
+
 nodeSelector: {}
 tolerations: []
 affinity: {}
@@ -51,3 +60,13 @@ readinessProbe:
   port: 8080
   initialDelaySeconds: 3
   periodSeconds: 5
+
+autoscaling:
+  enabled: true
+  minReplicas: 1
+  maxReplicas: 3
+  targetCPUUtilizationPercentage: 70
+
+env:
+  - name: MODEL_PATH
+    value: "/models/model.pkl"
