--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,21 +2,31 @@ name: ci-sanity
 on: [push, pull_request]
 
 jobs:
-    fmt-validate:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
+  fmt-validate:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-            - name: Setup Terraform
-              uses: hashicorp/setup-terraform@v3
-              with:
-                  terraform_version: 1.7.5
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.0
 
-            - name: Terraform fmt
-              run: terraform fmt -check -recursive
+      - name: Terraform fmt
+        working-directory: terraform
+        run: terraform fmt -check -recursive
 
-            - name: Helm lint
-              run: helm lint ./helm/ml-service || true
+      - name: Terraform validate
+        working-directory: terraform
+        run: |
+          terraform init -backend=false
+          terraform validate
 
-            - name: Docker build (smoke)
-              run: docker build -t ml-service:ci .
+      - name: Helm lint
+        run: |
+          helm lint ./helm/ml-service
+
+      - name: Docker build test
+        run: |
+          docker build -t ml-service:ci-test .
+          # Model trains inside Docker build - no pre-step needed!
